user and skillpost relationship